tests/fail/Unsolved.dtt
def unsolved (x : *) : * where * end